--- a/Fuentes/MisConciertos/app/src/main/res/values/strings.xml
+++ b/Fuentes/MisConciertos/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="valor_de_entrada">Valor de Entrada</string>
     <string name="calificacion">Calificacion</string>
     <string name="registar">Registar</string>
+    <string name="agregar">Agregar</string>
 
 
 </resources>
